vemo-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <nameField>
        <displayFormat>NOT-{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Notifications Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>