vemo-app/main/default/objects/Notification__c/fields/HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>HtmlBody__c</fullName>
    <label>Html Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>