vemo-app/main/default/objects/Notification__c/fields/PlainText__c.field-meta.xml
<CustomField>
    <fullName>PlainText__c</fullName>
    <label>Plain Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>