vemo-app/main/default/objects/Notification__c/fields/ToEmail__c.field-meta.xml
<CustomField>
    <fullName>ToEmail__c</fullName>
    <label>To Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>