vemo-app/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>ToEmail__c</columns>
    <columns>PlainText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>